ApiGateway/apigateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: apigateway
  name: apigateway
spec:
  ports:
    - protocol: "TCP"
      port: 5005
      targetPort: 80
      name: http
  selector:
    app: apigateway
status:
  loadBalancer: {}
